--- a/runtime-rpc/pom.xml
+++ b/runtime-rpc/pom.xml
@@ -91,13 +91,13 @@
                         <phase>generate-sources</phase>
                         <configuration>
                             <target>
-                                <mkdir dir="src/main/generated/org/capnproto"/>
+                                <mkdir dir="src/main/generated"/>
                                 <exec executable="capnp" failonerror="true">
                                     <arg value="compile"/>
                                     <arg value="-I"/>
                                     <arg value="../compiler/src/main/schema/"/>
                                     <arg value="--src-prefix=src/main/schema/"/>
-                                    <arg value="-o../capnpc-java:src/main/generated/org/capnproto"/>
+                                    <arg value="-o../capnpc-java:src/main/generated"/>
                                     <arg value="src/main/schema/rpc.capnp"/>
                                     <arg value="src/main/schema/rpc-twoparty.capnp"/>
                                     <env key="CAPNP_LITE" value="1"/>
@@ -113,13 +113,13 @@
                         <phase>generate-test-sources</phase>
                         <configuration>
                             <target>
-                                <mkdir dir="src/test/generated/org/capnproto/rpctest"/>
+                                <mkdir dir="src/test/generated"/>
                                 <exec executable="capnp" failonerror="true">
                                     <arg value="compile"/>
                                     <arg value="-I"/>
                                     <arg value="../compiler/src/main/schema/"/>
                                     <arg value="--src-prefix=src/test/schema/"/>
-                                    <arg value="-o../capnpc-java:src/test/generated/org/capnproto/rpctest"/>
+                                    <arg value="-o../capnpc-java:src/test/generated"/>
                                     <arg value="src/test/schema/test.capnp"/>
                                 </exec>
                             </target>
